--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "AO2 Server",
   "main": "Server.js",
   "dependencies": {
-    "ini-parser": "0.0.2",
-    "js-yaml": "^3.12.0"
+    "@jedmao/ini-parser": "^0.2.4",
+    "js-yaml": "^3.14.0"
   },
   "devDependencies": {},
   "scripts": {
